fix header overflowing

--- a/home/css/app.css
+++ b/home/css/app.css
@@ -65,7 +65,6 @@ a {
   color: black;
   font-size: 3rem;
   height: 4rem;
-  width: 50%;
   margin-left: 2rem; }
   @media only print {
     #header-title {
@@ -81,9 +80,10 @@ a {
 
 #header-menu {
   height: 4rem;
-  width: 40%;
   display: flex;
-  flex-flow: column wrap; }
+  flex-flow: column wrap;
+  flex-grow: 1;
+  margin-right: 2rem; }
   @media only screen and (min-device-width: 461px) and (min-width: 461px) and (max-width: 1129px) {
     #header-menu {
       width: 50%; } }
