--- a/home/scss/partials/header.scss
+++ b/home/scss/partials/header.scss
@@ -23,7 +23,6 @@
 	color: black;
 	font-size: 3rem;
     height: 4rem;
-    width: 50%;
     margin-left: 2rem;
 	@include respond-to(print) {
 		color: black;
@@ -40,9 +39,10 @@
 
 #header-menu {
     height: 4rem;
-    width: 40%;
     display: flex;
     flex-flow: column wrap;
+    flex-grow: 1;
+    margin-right: 2rem;
     @include respond-to(medium) {
         width: 50%;
     }
